src/gatsby/assets/styles/_main.css
/**
 * layout
 */

body {
  @apply bg-white;
}

/* indexes */

.gatsby_site-main {
  position: relative;
  z-index: 5;
}

.gatsby_site-article_hero {
  position: relative;
  z-index: 6;
}

.gatsby_site-article_content {
  position: relative;
  z-index: 9;
}

.gatsby_site-footer {
  position: relative;
  z-index: 7;
}

/* prevent horizontal overflow */

.gatsby_site-wrapper {
  overflow: hidden;
}

.gatsby_site-header, .gatsby_site-main, .gatsby_site-footer {
  @apply w-full;
}

/* sticky footer */

.gatsby_site-wrapper {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  min-height: 100vh;
  min-height: calc(var(--vh, 1vh) * 100);
}

.gatsby_site-main,
.gatsby_site-main_inner,
.gatsby_site-article,
.gatsby_site-article_inner {
  display: flex;
  flex-direction: column;
  flex: 1 1 auto;
}

.gatsby_site-article_content {
  flex: 1 1 auto;
}

/* layout */

.gatsby_site-article_hero {
  @apply py-10 md:py-20;
  border-bottom: 1px solid theme('colors.gray.200');
  background: theme('colors.gray.100');
  background: linear-gradient(225deg, theme('colors.gray.100') 33%, theme('colors.gray.200') 100%);
}

.gatsby_site-footer {
  border-top: 1px solid theme('colors.gray.200');
  background: theme('colors.gray.100');
  background: linear-gradient(225deg, theme('colors.gray.100') 33%, theme('colors.gray.200') 100%);
}

.gatsby_site-article--home {
  @apply bg-white;
  .gatsby_site-footer_inner {
    @apply container;
  }
}

.gatsby_site-article--markdown {
  @apply bg-white;
  @screen lg {
    margin-left: 18rem;
  }
  @screen xl {
    margin-left: 20rem;
  }
  .gatsby_site-article_hero-inner, .gatsby_site-article_content, .gatsby_site-footer_inner {
    @apply container;
    max-width: 1152px;
    @screen lg {
      @apply ml-0;
    }
  }
  .gatsby_site-article_content {
    @apply py-10 md:py-20;
    background: theme('colors.white');
  }
}

.gatsby_site-article_hero {
  .p {
    @apply mt-0 mb-2;
    line-height: theme('lineHeight.snug');
    opacity: 0.5;
  }
}

.gatsby_site-article_hero-inner {
  position: relative;
}

.gatsby_site-article_hero-content {
  .badge {
    @apply border-gray-300 bg-gray-300 -mt-4 ml-4;
  }
  h1 {
    span {
      display: inline-block;
    }
    span span {
      font-weight: theme('fontWeight.normal');
      color: theme('colors.gray.500');
    }
  }
}

.gatsby_site-article_hero-content-inner {
  max-width: 70rem;
  &:not(.fade) {
     pointer-events: none;
   }
}

/**
 * listing
 */

.gatsby_listing {
  @apply mt-10 md:mt-20 mt-fc;
  div:empty + & {
    @apply mt-0;
  }
}

.gatsby_listing-group {
  @apply w-full;
}

.gatsby_listing-items {
  .gatsby_listing .h-block + & {
    @apply my-5;
    @screen sm {
      @apply my-10;
    }
  }
  .gatsby_listing-group:last-child & {
    @apply mb-0;
  }
  > .row {
    @apply -m-3;
    @screen sm {
      @apply -m-5;
    }
    .gatsby_site-article_foot & {
      @apply my-0 !important;
      .gatsby_listing-column {
        @apply mb-4 !important;
      }
    }
  }
}

.gatsby_listing-column {
  @apply w-2/4 md:w-2/6 lg:w-2/4 xl:w-2/6;
  .gatsby_site-article_foot & {
    &:nth-child(1) {
      display: none;
      @screen md {
        display: block;
      }
    }
  }
}

.gatsby_listing-item {
  @apply py-2 px-3 sm:py-4 sm:px-5 text-xs text-black links-default rounded-md transform transition duration-500 ease-in-out hover:ease-out active:ease-out hover:text-white hover:bg-accent-500 hover:shadow-xl hover:-translate-y-2 active:text-white active:bg-accent-600 active:shadow-md active:-translate-y-0.5;
  .h4 {
    @apply mb-1.5;
    font-size: 1rem;
  }
  p {
    opacity: 0.5;
  }
  .gatsby_listing-item--themes& {
    text-align: center;
  }
  .media-container {
    @apply mt-3 rounded-md border-3 border-gray-500 border-opacity-25 bg-gray-200;
    padding-bottom: 60.6%;
  }
}

